Fixed relationship between navbar and carousel so there is not so much overlap. Cleaned up index.html and style.css code and comments.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,6 @@ body {
 	padding: 0;
 }
 
-.banner {
-
-}
-
 .navbar {
 	background-color: black;
 	height: 175px;
@@ -25,21 +21,11 @@ body {
 }
 
 .author_name {
-	/*font-family: 'Orbitron', sans-serif;*/
-	/*font-family: 'Amatic SC', cursive;*/
 	font-family: 'Architects Daughter', cursive;
-	/*font-family: 'Delius Unicase', cursive;*/
-	/*font-family: 'Audiowide', cursive;*/
-	/*font-family: 'Gochi Hand', cursive;*/
 }
 
 .subheading {
-	/*font-family: 'Orbitron', sans-serif;*/
 	font-family: 'Amatic SC', cursive;
-	/*font-family: 'Architects Daughter', cursive;*/
-	/*font-family: 'Delius Unicase', cursive;*/
-	/*font-family: 'Audiowide', cursive;*/
-	/*font-family: 'Gochi Hand', cursive;*/
 }
 
 /*ISN'T WORKING: */
@@ -66,12 +52,15 @@ modal-content {
 	padding: 0;
 }
 
+#myCarousel {
+	margin-top: 170px;
+}
+
 .wallpaper {
-	/*background-repeat: no-repeat;*/
 	background-position: center top;
 	background-attachment: scroll;
 	width: 100%;
-	margin: 87px 0 0 0;
+	margin: 0;
 	border: none;
 	padding: 0;
 }
